// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> spec renders the component 1`] = `
<DocumentFragment>
  <header
    class="header theme-light"
  >
    <a
      class="skipToContent"
      href="#content"
    >
      Skip to content
    </a>
    <div
      class="belowM"
    >
      <div
        class="headerBackgroundWrapper"
      >
        <div
          class="headerContainer"
        >
          <div
            class="title"
          >
            <img
              alt=""
              class="logo"
              src="dummySrc"
            />
            <span>
              Foo
            </span>
          </div>
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="menu"
            class="mobileMenuToggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="menu-hamburger"
              class="icon s"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M22 17V19H2V17H22ZM22 11V13H2V11H22ZM22 5V7H2V5H22Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="aboveM"
    >
      <div
        class="headerBackgroundWrapper"
      >
        <div
          class="headerContainer"
        >
          <div
            class="title"
          >
            <img
              alt=""
              class="logo"
              src="dummySrc"
            />
            <span>
              Foo
            </span>
          </div>
          <div
            class="headerContent"
          />
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`<Navigation /> spec renders the component with titleUrl 1`] = `
<DocumentFragment>
  <header
    class="header theme-light"
  >
    <a
      class="skipToContent"
      href="#content"
    >
      Skip to content
    </a>
    <div
      class="belowM"
    >
      <div
        class="headerBackgroundWrapper"
      >
        <div
          class="headerContainer"
        >
          <a
            class="title"
            href="hds.hel.fi"
          >
            <img
              alt=""
              class="logo"
              src="dummySrc"
            />
            <span>
              Foo
            </span>
          </a>
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="menu"
            class="mobileMenuToggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              aria-label="menu-hamburger"
              class="icon s"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M22 17V19H2V17H22ZM22 11V13H2V11H22ZM22 5V7H2V5H22Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="aboveM"
    >
      <div
        class="headerBackgroundWrapper"
      >
        <div
          class="headerContainer"
        >
          <a
            class="title"
            href="hds.hel.fi"
          >
            <img
              alt=""
              class="logo"
              src="dummySrc"
            />
            <span>
              Foo
            </span>
          </a>
          <div
            class="headerContent"
          />
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
